feat(application): implement ProcessLeadCommandHandler with full CQRS pattern
Core Handler Implementation:
- Add ProcessLeadCommandHandler with MediatR IRequestHandler<ProcessLeadCommand, Unit>
- Use C# 12 primary constructor with DI (repository, dateTimeProvider, validator, logger)
- Implement async validation with FluentValidation
- Add idempotency check via CorrelationId (prevents duplicate processing)
- Use IDateTimeProvider abstraction for deterministic UTC timestamps
- Parse optional ISO 8601 message timestamps for audit trail
- Map ProcessLeadCommand to Lead domain entity
- Add comprehensive structured logging (Info, Warning, Error, Debug)
- Implement proper exception handling:
  * ValidationException (logged as Warning, rethrown)
  * DuplicateLeadException (logged as Info, rethrown)
  * Unexpected exceptions (logged as Error, rethrown)
- Support full CancellationToken propagation

Domain & Infrastructure Support:
- Add IDateTimeProvider interface (Domain layer)
- Add SystemDateTimeProvider implementation (Infrastructure layer)
- Add DuplicateLeadException with CorrelationId property

Dependency Injection:
- Add Application.DependencyInjection.ServiceCollectionExtensions
  * Register MediatR handlers from assembly
  * Register FluentValidation validators from assembly
- Add Infrastructure.DependencyInjection.ServiceCollectionExtensions
  * Register IDateTimeProvider as Singleton
- Add FluentValidation.DependencyInjectionExtensions package
- Add Microsoft.Extensions.Logging.Abstractions package

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,6 +7,7 @@
     <!-- Application Layer -->
     <PackageVersion Include="MediatR" Version="12.4.1" />
     <PackageVersion Include="FluentValidation" Version="11.10.0" />
+    <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
 
     <!-- Infrastructure Layer - EF Core -->
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
@@ -22,8 +23,9 @@
     <PackageVersion Include="Amazon.Lambda.SQSEvents" Version="2.2.0" />
     <PackageVersion Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.3" />
 
-    <!-- Dependency Injection -->
+    <!-- Dependency Injection & Logging -->
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
 
     <!-- Testing Frameworks -->
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
