feat(infrastructure): add DateTime provider implementations for UTC time handling

--- a/tests/LeadProcessor.TestHelpers/LeadProcessor.TestHelpers.csproj
+++ b/tests/LeadProcessor.TestHelpers/LeadProcessor.TestHelpers.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\LeadProcessor.Domain\LeadProcessor.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
