--- a/tests/LeadProcessor.UnitTests/LeadProcessor.UnitTests.csproj
+++ b/tests/LeadProcessor.UnitTests/LeadProcessor.UnitTests.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\LeadProcessor.Application\LeadProcessor.Application.csproj" />
+    <ProjectReference Include="..\..\src\LeadProcessor.Infrastructure\LeadProcessor.Infrastructure.csproj" />
     <ProjectReference Include="..\LeadProcessor.TestHelpers\LeadProcessor.TestHelpers.csproj" />
   </ItemGroup>
 
