--- a/tests/LeadProcessor.UnitTests/LeadProcessor.UnitTests.csproj
+++ b/tests/LeadProcessor.UnitTests/LeadProcessor.UnitTests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Moq" />
     <PackageReference Include="xunit" />
