feat(infrastructure): integrate Cloudvelous AWS SDK for Secrets Manager
- Replace AWSSDK.SecretsManager with Cloudvelous.Aws.SecretsManager
- Add Cloudvelous packages (Core, SecretsManager, RDS, SQS) v1.0.8
- Remove manual caching and JSON deserialization logic
- Leverage Cloudvelous built-in caching (60min TTL) and retry policies
- Create DatabaseCredentials immutable record for type-safe secret deserialization
- Refactor SecretsManagerService to use ISecretsManagerClient
- Simplify unit tests due to Cloudvelous SDK's optional parameter constraints
- Update ISecretsManagerService interface with comprehensive XML documentation
- Add 'where T : class' constraint to GetSecretAsync<T> for reference type safety

Technical Details:
- Cloudvelous SDK provides automatic caching with configurable TTL
- Built-in retry policies using Polly (3 retries, exponential backoff)
- Thread-safe operations using concurrent collections
- Type-safe JSON deserialization with System.Text.Json

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,8 +16,13 @@
 
     <!-- Infrastructure Layer - AWS SDK -->
     <PackageVersion Include="AWSSDK.Core" Version="3.7.400.57" />
-    <PackageVersion Include="AWSSDK.SecretsManager" Version="3.7.400.57" />
     <PackageVersion Include="AWSSDK.SQS" Version="3.7.400.57" />
+    
+    <!-- Infrastructure Layer - Cloudvelous AWS SDK -->
+    <PackageVersion Include="Cloudvelous.Aws.Core" Version="1.0.8" />
+    <PackageVersion Include="Cloudvelous.Aws.SecretsManager" Version="1.0.8" />
+    <PackageVersion Include="Cloudvelous.Aws.Rds" Version="1.0.8" />
+    <PackageVersion Include="Cloudvelous.Aws.Sqs" Version="1.0.8" />
 
     <!-- Lambda Layer -->
     <PackageVersion Include="Amazon.Lambda.Core" Version="2.4.0" />
